Hapus pmb YOGA PRADIKA.zip

--- a/landing page html.html
+++ b/landing page html.html
@@ -21,7 +21,7 @@
 
   <!-- Hero Section -->
   <section class="hero">
-    <img src="/Users/user/Downloads/pak jakak/IMG_20250613_143915.jpg" alt="Foto Profil">
+    <img src="/Users/user/Downloads/pak jakak/pp.jpg" alt="Foto Profil">
     <h1>Hai... <span style="color:#e0f7fa">Terimakasih Sudah Singgah!</span></h1>
     <p>Salam hangat dari saya dsan semoga kamu sehat selalu</p>
     <a href="#pendidikan" class="btn-scroll">Selengkapnya</a>
@@ -30,7 +30,7 @@
   <section id="tentang" class="tentang-section">
   <h2>Tentang Saya</h2>
   <div class="tentang-container">
-    <img src="/Users/user/Downloads/pak jakak/IMG_20250203_143240 (1).jpg" alt="Foto Saya">
+    <img src="/Users/user/Downloads/pak jakak/foto saya.jpg" alt="Foto Saya">
     <div class="tentang-text">
       <p>Halo! Saya adalah seorang pelajar yang penuh semangat belajar dan berkembang. Saya memiliki minat dalam teknologi, desain, dan pendidikan. Saat ini saya sedang menempuh pendidikan dan terus mengejar impian saya untuk menjadi seseorang yang bermanfaat.</p>
       <p>Di waktu luang, saya suka membaca buku, menulis, dan mendesain sesuatu yang kreatif. Saya percaya bahwa belajar tidak ada batasnya!</p>
