--- a/landing page html.html
+++ b/landing page html.html
@@ -21,7 +21,7 @@
 
   <!-- Hero Section -->
   <section class="hero">
-    <img src="/Users/user/Downloads/pak jakak/pp.jpg" alt="Foto Profil">
+    <img src="pp.jpg" alt="Foto Profil">
     <h1>Hai... <span style="color:#e0f7fa">Terimakasih Sudah Singgah!</span></h1>
     <p>Salam hangat dari saya dsan semoga kamu sehat selalu</p>
     <a href="#pendidikan" class="btn-scroll">Selengkapnya</a>
@@ -30,7 +30,7 @@
   <section id="tentang" class="tentang-section">
   <h2>Tentang Saya</h2>
   <div class="tentang-container">
-    <img src="/Users/user/Downloads/pak jakak/foto saya.jpg" alt="Foto Saya">
+    <img src="foto saya.jpg" alt="Foto Saya">
     <div class="tentang-text">
       <p>Halo! Saya adalah seorang pelajar yang penuh semangat belajar dan berkembang. Saya memiliki minat dalam teknologi, desain, dan pendidikan. Saat ini saya sedang menempuh pendidikan dan terus mengejar impian saya untuk menjadi seseorang yang bermanfaat.</p>
       <p>Di waktu luang, saya suka membaca buku, menulis, dan mendesain sesuatu yang kreatif. Saya percaya bahwa belajar tidak ada batasnya!</p>
@@ -43,17 +43,17 @@
     <h2>Riwayat Pendidikan</h2>
     <div class="cards">
       <div class="card">
-        <img src="/Users/user/Downloads/pak jakak/sd.png" alt="Logo SD">
+        <img src="sd.png" alt="Logo SD">
         <h3>Sekolah Dasar</h3>
         <p>Saya bersekolah di SD Negeri Sugih Waras .</p>
       </div>
       <div class="card">
-        <img src="/Users/user/Downloads/pak jakak/smp.png" alt="Logo SMP">
+        <img src="smp.png" alt="Logo SMP">
         <h3>Sekolah Menengah Pertama</h3>
         <p>Saya melanjutkan pendidikan di SMP Negeri 1 Belitang madang raya.</p>
       </div>
       <div class="card">
-        <img src="/Users/user/Downloads/pak jakak/smk.jpg" alt="Logo SMA">
+        <img src="smk.jpg" alt="Logo SMA">
         <h3>Sekolah Menengah Kejuruan</h3>
         <p>Saya menyelesaikan di Smk Pgri 2 Belitang.</p>
       </div>
